2008-06-14  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_label_new binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-06-14  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala:

	fixed attribute parsing 

2008-06-13  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Check printf arguments, fixes bug 483104

	* vala/valainterfacewriter.vala:
	* tests/test-034.vala:

	Fix printf arguments

2008-06-13  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Support object creation expressions for simple types

2008-06-13  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Use G_TYPE_UINT as type_id for unichar

2008-06-13  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala:

	Implement is_subtype_of method so that structs are considered
	compatible to the specified base type

2008-06-12  Jürg Billeter  <j@bitron.ch>

	* vala/valatypeparametertype.vala:

	Use G_TYPE_POINTER as type_id for type parameters

2008-06-12  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:

	Use `const' in C for immutable classes where appropriate

2008-06-12  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:
	* vapigen/valagidlparser.vala:

	Support Immutable class attribute

	* vapi/packages/gstreamer-0.10/:

	Mark GstStructure as Immutable as reference-type semantics are not
	desirable

	* vapi/gstreamer-0.10.vapi: regenerated

2008-06-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicmethodbinding.vala:

	Use GPtrArray in D-Bus client methods for boxed types

2008-06-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicmethodbinding.vala:

	Fix application crash when a D-Bus client method raises an error

2008-06-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicmethodbinding.vala:

	Fix gcc warning for D-Bus client methods returning arrays

2008-06-11  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicmethodbinding.vala:
