@@ -16,20 +16,38 @@ GstRTSPVersion cheader_filename="gst/rtsp/gstrtspdefs.h"
 GstRTSPEvent cheader_filename="gst/rtsp/gstrtspconnection.h"
 GstRTSPMethod cheader_filename="gst/rtsp/gstrtspdefs.h"
 GstRTSPConnection cheader_filename="gst/rtsp/gstrtspconnection.h"
-GstRTSPMessage cheader_filename="gst/rtsp/gstrtspconnection.h"
+GstRTSPMessage cheader_filename="gst/rtsp/gstrtspmessage.h"
+GstRTSPMessage.hdr_fields weak="0"
 GstRTSPRange cheader_filename="gst/rtsp/gstrtsprange.h"
 GstRTSPTime cheader_filename="gst/rtsp/gstrtsprange.h"
 GstRTSPTimeRange cheader_filename="gst/rtsp/gstrtsprange.h"
-GstRTSPTransport cheader_filename="gst/rtsp/gstrtsptransport.h"
+GstRTSPTimeRange.* weak="0"
+GstRTSPTransport.* weak="0"
 GstRTSPUrl cheader_filename="gst/rtsp/gstrtspconnection.h"
+GstRTSPUrl.* weak="0"
 GstRTSPExtension cheader_filename="gst/rtsp/gstrtspextension.h"
 gst_rtsp_base64_decode_ip cheader_filename="gst/rtsp/gstrtspbase64.h"
 gst_rtsp_base64_encode cheader_filename="gst/rtsp/gstrtspbase64.h"
+gst_rtsp_connection_create.conn transfer_ownership="1"
 gst_rtsp_find_header_field cheader_filename="gst/rtsp/gstrtspdefs.h"
 gst_rtsp_find_method cheader_filename="gst/rtsp/gstrtspdefs.h"
 gst_rtsp_header_as_text cheader_filename="gst/rtsp/gstrtspdefs.h"
 gst_rtsp_method_as_text cheader_filename="gst/rtsp/gstrtspdefs.h"
+gst_rtsp_message_new hidden="1"
+gst_rtsp_message_new_request hidden="1"
+gst_rtsp_message_new_response hidden="1"
+gst_rtsp_message_new_data hidden="1"
+gst_rtsp_message_get_body.data is_array="1" is_out="1"
+gst_rtsp_message_get_header.value is_out="1"
+gst_rtsp_message_set_body.data is_array="1"
+gst_rtsp_message_steal_body.data is_array="1" is_out="1" value_owned="1"
+gst_rtsp_message_take_body.data is_array="1" takes_ownership="1"
+gst_rtsp_range_parse.range transfer_ownership="1"
 gst_rtsp_status_as_text cheader_filename="gst/rtsp/gstrtspdefs.h"
 gst_rtsp_strresult cheader_filename="gst/rtsp/gstrtspdefs.h"
+gst_rtsp_transport_new hidden="1"
+gst_rtsp_transport_as_text transfer_ownership="1"
+gst_rtsp_url_get_request_uri transfer_ownership="1"
+gst_rtsp_url_parse.url transfer_ownership="1"
 gst_rtsp_version_as_text cheader_filename="gst/rtsp/gstrtspdefs.h"
 GST_RTSP_DEFAULT_PORT cheader_filename="gst/rtsp/gstrtspurl.h"
